# dse-oss-reports

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
src/dse_oss_reports/: __init__.py  cli.py  docs.py  generator.py  objectives.py  pi_dates.py  plot.py  queries.py  settings.py
tests/: conftest.py  test_cli.py  test_docs.py  test_fixtures.py  test_generator.py  test_objectives.py  test_pi_dates.py  test_plot.py  test_queries.py  test_settings.py
tests/fixtures/: sample_commits.csv  sample_objectives.py
