[project]
name = "dse-oss-reports"
version = "0.0.1"
description = "Shared library for open-source contribution reporting across NASA-ODSI DSE teams"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.12"
authors = [{ name = "NASA-ODSI" }]
dependencies = [
    "matplotlib>=3.10",
    "pandas>=2.3",
    "pygithub>=2.6",
]

[project.urls]
Repository = "https://github.com/NASA-IMPACT/dse-oss-reports"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dse_oss_reports"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
